// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`namespace-styled-components namespaces a style block with &&: namespaces a style block with && 1`] = `
"
import styled from 'styled-components';

export default styled.input\`
  && {
    border: \${props => props.borderWidth} solid \${props => props.borderColor};
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components';

export default styled.input\`.namespace && {
    border: \${props => props.borderWidth} solid \${props => props.borderColor};
  }\`;
"
`;

exports[`namespace-styled-components namespaces a style block with a sibling selector: namespaces a style block with a sibling selector 1`] = `
"
import styled from 'styled-components';

export default styled.button\`
  padding: \${props => props.padding};

  & + & {
    margin-left: \${props => props.spaceBetween};
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components';

export default styled.button\`.namespace & { 
  padding: \${props => props.padding};
 }

  .namespace & + & {
    margin-left: \${props => props.spaceBetween};
  }\`;
"
`;

exports[`namespace-styled-components namespaces a style block with interpolated mixins: namespaces a style block with interpolated mixins 1`] = `
"
import styled, { css } from 'styled-components';

const displayBlockMixin = css\`
  display: block;
\`;

export default styled.div\`
  \${displayBlockMixin}

  position: relative;

  &:hover {
    opacity: 1;
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import styled, { css } from 'styled-components';

const displayBlockMixin = css\`
  display: block;
\`;

export default styled.div\`.namespace & { 
  \${displayBlockMixin}

  position: relative;
 }

  .namespace &:hover {
    opacity: 1;
  }\`;
"
`;

exports[`namespace-styled-components namespaces a style block with interpolated selectors: namespaces a style block with interpolated selectors 1`] = `
"
import styled from 'styled-components';

const Child = styled.span;

export default styled.div\`
  position: relative;

  \${Child} {
    \${props => props.childStyles};
  }

  \${Child} + &,
  & + \${Child} {
    margin-right: \${props => props.spaceBetween};
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components';

const Child = styled.span;

export default styled.div\`.namespace & { 
  position: relative;
 }

  \${Child}

  .namespace & {
    \${props => props.childStyles};
  }

  \${Child}

  .namespace + &,
  .namespace & + \${Child} {
    margin-right: \${props => props.spaceBetween};
  }\`;
"
`;

exports[`namespace-styled-components namespaces a style block with interpolations before and after a declaration: namespaces a style block with interpolations before and after a declaration 1`] = `
"
import styled from 'styled-components'

const stringify = (key, val) => \`\${key}: \${val};\`

export default styled.span\`
  && {
    \${() => stringify('background-color', 'red')};

    \${() => stringify('font-size', '12px')};

    color: pink;

    \${() => stringify('display', 'flex')};

    &:hover {
      color: red;
    }
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components';

const stringify = (key, val) => \`\${key}: \${val};\`;

export default styled.span\`.namespace && {
    \${() => stringify('background-color', 'red')};

    \${() => stringify('font-size', '12px')};

    color: pink;

    \${() => stringify('display', 'flex')}
  };

    .namespace &&:hover {
      color: red;
    }\`;
"
`;

exports[`namespace-styled-components namespaces a style block with no selectors: namespaces a style block with no selectors 1`] = `
"
import styled from 'styled-components';

export default styled.div\`
  background-color: \${props => props.backgroundColor};
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components';

export default styled.div\`.namespace & { 
  background-color: \${props => props.backgroundColor};
 }\`;
"
`;
